--- a/portfolio.html
+++ b/portfolio.html
@@ -13,28 +13,37 @@
   </head>
 
   <body>
-    <!-- Шапка страницы -->
-    <header class="portfolio-header">
+    <!-- Header -->
+    <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a href="./" aria-label="логотип компании" class="logo">Web<span class="logo-text">Studio</span> </a>
-          <!-- Навигация на другие страницы -->
-          <ul class="list site-nav">
-            <li class="item"><a href="./" class="link">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-            <li class="item"><a href="./contacts" class="link">Контакты</a></li>
+          <a href="./" class="logo" aria-label="логотип компании">Web<span class="logo-text">Studio</span> </a>
+    
+          <!-- Navigation list -->
+          <ul class="navigation__list list">
+            <li class="navigation__list-item">
+              <a href="./" class="navigation__list-link link">Студия</a>
+            </li>
+            <li class="navigation__list-item">
+              <a href="./portfolio.html" class="navigation__list-link link current">Портфолио</a>
+            </li>
+            <li class="navigation__list-item">
+              <a href="./contacts" class="navigation__list-link link">Контакты</a>
+            </li>
           </ul>
         </nav>
     
-        <ul class="list contacts-nav">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"> <svg class="envelope">
+        <!-- Contacts list -->
+        <ul class="contacts__list list">
+          <li class="contacts__list-item">
+            <a href="mailto:info@devstudio.com" class="contacts__list-link link"> <svg class="contacts__list-svg_envelope">
                 <use href="./img/sprite.svg#icon-envelope"></use>
               </svg> info@devstudio.com
             </a>
           </li>
-          <li class="item"><a href="tel:+380961111111" class="link">
-              <svg class="phone">
+          <li class="contacts__list-item">
+            <a href="tel:+380961111111" class="contacts__list-link link">
+              <svg class="contacts__list-svg_phone">
                 <use href="./img/sprite.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11
             </a>
