portfolio header modified

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
   <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header header_portfolio">
       <div class="container">
         <nav class="navigation">
           <a href="./" class="logo" aria-label="логотип компании">Web<span class="logo-text">Studio</span> </a>
