--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Hero -->
       <section class="hero">
         <div class="container">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" data-modal-open class="button">Заказать услугу</button>
         </div>
       </section>
