--- a/index.html
+++ b/index.html
@@ -66,53 +66,53 @@
       <section class="section features">
         <div class="container">
           <!-- <h2  hidden>Особенности</h2> -->
-          <ul class="features-list-svg list">
-            <li class="features-item-svg">
-              <svg class="features-svg">
+          <ul class="features__list-svg list">
+            <li class="features__list-svg-item">
+              <svg class="features__svg">
                 <use href="./img/sprite.svg#icon-antenna"></use>
               </svg>
             </li>
-            <li class="features-item-svg">
-              <svg class="features-svg">
+            <li class="features__list-svg-item">
+              <svg class="features__svg">
                 <use href="./img/sprite.svg#icon-clock"></use>
               </svg>
             </li>
-            <li class="features-item-svg">
-              <svg class="features-svg">
+            <li class="features__list-svg-item">
+              <svg class="features__svg">
                 <use href="./img/sprite.svg#icon-diagram"></use>
               </svg>
             </li>
-            <li class="features-item-svg">
-              <svg class="features-svg">
+            <li class="features__list-svg-item">
+              <svg class="features__svg">
                 <use href="./img/sprite.svg#icon-astronaut"></use>
               </svg>
             </li>
           </ul>
-            <ul class="features-list list">
-          <li class="features-item">
-            <h3 class="title">Внимание к деталям</h3>
-            <p>
+            <ul class="features__list list">
+          <li class="features__list-item">
+            <h3 class="features__list-title">Внимание к деталям</h3>
+            <p class="features__list-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li class="features-item">
-            <h3 class="title">Пунктуальность</h3>
-            <p>
+          <li class="features__list-item">
+            <h3 class="features__list-title">Пунктуальность</h3>
+            <p class="features__list-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li class="features-item">
-            <h3 class="title">Планирование</h3>
-            <p>
+          <li class="features__list-item">
+            <h3 class="features__list-title">Планирование</h3>
+            <p class="features__list-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li class="features-item">
-            <h3 class="title">Современные технологии</h3>
-            <p>
+          <li class="features__list-item">
+            <h3 class="features__list-title">Современные технологии</h3>
+            <p class="features__list-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
