--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>  
     </header>
 
-    <!-- Уникальный контент страницы -->
+    <!-- Main -->
     <main>
       <!-- Hero -->
       <section class="hero">
@@ -121,22 +121,22 @@
         </div>
       </section>
 
-      <!-- Чем мы занимаемся -->
+      <!-- Works -->
       <section class="section works">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="works-list list">
-            <li class="item">
-              <img src="./img/work1.jpg" alt="Программист за рабочим столом" width="370" height="294" />
-              <p class="text">Десктопные приложения</p>
+          <ul class="works__list list">
+            <li class="works__list-item">
+              <img class="works__list-img" src="./img/work1.jpg" alt="Программист за рабочим столом" width="370" height="294" />
+              <p class="works__list-text">Десктопные приложения</p>
             </li>
-            <li class="item">
-              <img src="./img/work2.jpg" alt="Разработчик за работой мобильного приложения" width="370" height="294" />
-              <p class="text">Мобильные приложения</p>
+            <li class="works__list-item">
+              <img class="works__list-img" src="./img/work2.jpg" alt="Разработчик за работой мобильного приложения" width="370" height="294" />
+              <p class="works__list-text">Мобильные приложения</p>
             </li>
-            <li class="item">
-              <img src="./img/work3.jpg" alt="Дизайнер выбирает цвет" width="370" height="294" />
-              <p class="text">Дизайнерские решения</p>
+            <li class="works__list-item">
+              <img class="works__list-img" src="./img/work3.jpg" alt="Дизайнер выбирает цвет" width="370" height="294" />
+              <p class="works__list-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
