--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
         </div>
       </section>
 
-      <!-- Наша команда -->
-      <section class="section staff">
+      <!-- Team -->
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="staff-list list">
-            <li class="staff-item">
-              <img src="./img/igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-              <div class="staff-container">
-                <h3 class="name">Игорь Демьяненко</h3>
-                <p lang="en" class="text">Product Designer</p>
+          <ul class="team__list list">
+            <li class="team__list-item">
+              <img class="team__list-img" src="./img/igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+              <div class="team-container">
+                <h3 class="team__list-name">Игорь Демьяненко</h3>
+                <p lang="en" class="team__list-text">Product Designer</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link link">
@@ -184,11 +184,11 @@
                 </ul>
               </div>
             </li>
-            <li class="staff-item">
-              <img src="./img/olga.jpg" alt="Ольга Репина" width="270" height="260" />
-              <div class="staff-container">
-                <h3 class="name">Ольга Репина</h3>
-                <p lang="en" class="text">Frontend Developer</p>
+            <li class="team__list-item">
+              <img class="team__list-img" src="./img/olga.jpg" alt="Ольга Репина" width="270" height="260" />
+              <div class="team-container">
+                <h3 class="team__list-name">Ольга Репина</h3>
+                <p lang="en" class="team__list-text">Frontend Developer</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link link">
@@ -221,11 +221,11 @@
                 </ul>
               </div>
             </li>
-            <li class="staff-item">
-              <img src="./img/nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
-              <div class="staff-container">
-                <h3 class="name">Николай Тарасов</h3>
-                <p lang="en" class="text">Marketing</p>
+            <li class="team__list-item">
+              <img class="team__list-img" src="./img/nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
+              <div class="team-container">
+                <h3 class="team__list-name">Николай Тарасов</h3>
+                <p lang="en" class="team__list-text">Marketing</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link link">
@@ -258,11 +258,11 @@
                 </ul>
               </div>
             </li>
-            <li class="staff-item">
-              <img src="./img/mikhail.jpg" alt="Михаил Ермаков" width="270" height="260" />
-              <div class="staff-container">
-              <h3 class="name">Михаил Ермаков</h3>
-              <p lang="en" class="text">UI Designer</p>
+            <li class="team__list-item">
+              <img class="team__list-img" src="./img/mikhail.jpg" alt="Михаил Ермаков" width="270" height="260" />
+              <div class="team-container">
+              <h3 class="team__list-name">Михаил Ермаков</h3>
+              <p lang="en" class="team__list-text">UI Designer</p>
               <ul class="social-list list">
                 <li class="social-list-item">
                   <a href="" class="social-list-link link">
