social-list bem done

--- a/index.html
+++ b/index.html
@@ -153,30 +153,30 @@
                 <h3 class="team__list-name">Игорь Демьяненко</h3>
                 <p lang="en" class="team__list-text">Product Designer</p>
                 <ul class="social-list list">
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -190,30 +190,30 @@
                 <h3 class="team__list-name">Ольга Репина</h3>
                 <p lang="en" class="team__list-text">Frontend Developer</p>
                 <ul class="social-list list">
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -227,30 +227,30 @@
                 <h3 class="team__list-name">Николай Тарасов</h3>
                 <p lang="en" class="team__list-text">Marketing</p>
                 <ul class="social-list list">
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
-                    <a href="" class="social-list-link link">
-                      <svg class="social-list-svg">
+                  <li class="social-list__item">
+                    <a href="" class="social-list__link link">
+                      <svg class="social-list__svg">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -264,30 +264,30 @@
               <h3 class="team__list-name">Михаил Ермаков</h3>
               <p lang="en" class="team__list-text">UI Designer</p>
               <ul class="social-list list">
-                <li class="social-list-item">
-                  <a href="" class="social-list-link link">
-                    <svg class="social-list-svg">
+                <li class="social-list__item">
+                  <a href="" class="social-list__link link">
+                    <svg class="social-list__svg">
                       <use href="./img/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link link">
-                    <svg class="social-list-svg">
+                <li class="social-list__item">
+                  <a href="" class="social-list__link link">
+                    <svg class="social-list__svg">
                       <use href="./img/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link link">
-                    <svg class="social-list-svg">
+                <li class="social-list__item">
+                  <a href="" class="social-list__link link">
+                    <svg class="social-list__svg">
                       <use href="./img/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-list-item">
-                  <a href="" class="social-list-link link">
-                    <svg class="social-list-svg">
+                <li class="social-list__item">
+                  <a href="" class="social-list__link link">
+                    <svg class="social-list__svg">
                       <use href="./img/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -366,30 +366,30 @@
         <div class="footer-social">
           <p class="social-list-text">Присоединяйтесь</p>
           <ul class="social-list list">            
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-svg">
+            <li class="social-list__item">
+              <a href="" class="social-list__link link">
+                <svg class="social-list__svg">
                   <use href="./img/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-svg">
+            <li class="social-list__item">
+              <a href="" class="social-list__link link">
+                <svg class="social-list__svg">
                   <use href="./img/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-svg">
+            <li class="social-list__item">
+              <a href="" class="social-list__link link">
+                <svg class="social-list__svg">
                   <use href="./img/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-item">
-              <a href="" class="social-list-link link">
-                <svg class="social-list-svg">
+            <li class="social-list__item">
+              <a href="" class="social-list__link link">
+                <svg class="social-list__svg">
                   <use href="./img/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
