clients bem done

--- a/index.html
+++ b/index.html
@@ -303,56 +303,55 @@
       <section class="section clients">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="list clients-list">
-            <li class="clients-item">
-              <a href="" class="clients-list-link link">
-                <svg class="clients-svg">
+          <ul class="list clients__list">
+            <li class="clients__list-item">
+              <a href="" class="clients__list-link link">
+                <svg class="clients__svg">
                   <use href="./img/sprite.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="" class="clients-list-link link">
-                <svg class="clients-svg">
+            <li class="clients__list-item">
+              <a href="" class="clients__list-link link">
+                <svg class="clients__svg">
                 <use href="./img/sprite.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="" class="clients-list-link link">
-                <svg class="clients-svg">
+            <li class="clients__list-item">
+              <a href="" class="clients__list-link link">
+                <svg class="clients__svg">
                   <use href="./img/sprite.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="" class="clients-list-link link">
-                <svg class="clients-svg">
+            <li class="clients__list-item">
+              <a href="" class="clients__list-link link">
+                <svg class="clients__svg">
                   <use href="./img/sprite.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="" class="clients-list-link link">
-                <svg class="clients-svg">
+            <li class="clients__list-item">
+              <a href="" class="clients__list-link link">
+                <svg class="clients__svg">
                   <use href="./img/sprite.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="" class="clients-list-link link">
-                <svg class="clients-svg">
+            <li class="clients__list-item">
+              <a href="" class="clients__list-link link">
+                <svg class="clients__svg">
                   <use href="./img/sprite.svg#icon-client6"></use>
                 </svg>
               </a>
             </li>
-            
           </ul>
         </div>
       </section>
     </main>
         
-    <!-- Подвал страницы -->
+    <!-- Footer -->
     <footer>
       <div class="container">
         <div class="footer-contact">
