--- a/index.html
+++ b/index.html
@@ -352,18 +352,18 @@
     </main>
         
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <div class="container">
-        <div class="footer-contact">
-          <a href="./" aria-label="логотип компании" class="logo">Web<span>Studio</span></a>
+        <div class="footer__contact">
+          <a href="./" aria-label="логотип компании" class="logo">Web<span class="footer-logo">Studio</span></a>
           <address>
-            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@example.com" class="mail">info@example.com</a>
-            <a href="tel:+380991111111" class="phone">+38 099 111 11 11</a>
+            <p class="footer__contact-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@example.com" class="footer__contact-email">info@example.com</a>
+            <a href="tel:+380991111111" class="footer__contact-phone">+38 099 111 11 11</a>
           </address>
         </div>
-        <div class="footer-social">
-          <p class="social-list-text">Присоединяйтесь</p>
+        <div class="footer__social-list">
+          <p class="footer__social-text">Присоединяйтесь</p>
           <ul class="social-list list">            
             <li class="social-list__item">
               <a href="" class="social-list__link link">
@@ -395,12 +395,12 @@
             </li>
           </ul>
         </div>
-        <div class="footer-subscribe">
-          <p class="subscribe-title">Подпишитесь на рассылку</p>
-          <form action="#" class="subscribe-form">
-            <input type="email" name="subscribe-input" id="" class="subscribe-input" placeholder="E-mail">
-            <button type="button" class="subscribe-btn button">Подписаться
-              <svg class="subscribe-send-svg">
+        <div class="footer__subscribe">
+          <p class="footer__subscribe-title">Подпишитесь на рассылку</p>
+          <form action="#" class="footer__subscribe-form">
+            <input type="email" name="subscribe-input" id="" class="footer__subscribe-input" placeholder="E-mail">
+            <button type="button" class="footer__subscribe-btn button">Подписаться
+              <svg class="footer__subscribe-svg">
                 <use href="./img/icon-send.svg#icon-icon-send"></use>
               </svg>
             </button>
