filter bem done

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
   <body>
     <!-- Header -->
-    <header class="header header_portfolio">
+    <header class="header portfolio-header">
       <div class="container">
         <nav class="navigation">
           <a href="./" class="logo" aria-label="логотип компании">Web<span class="logo-text">Studio</span> </a>
@@ -59,12 +59,12 @@
         <div class="container">
           <!-- Portfolio Filter -->
           <!-- <h2 hidden>Фильтр работ</h2> -->
-          <ul class="list filter-list">
-            <li class="filter-item"><button type="button" class="option">Все</button></li>
-            <li class="filter-item"><button type="button" class="option">Веб-сайты</button></li>
-            <li class="filter-item"><button type="button" class="option">Приложения</button></li>
-            <li class="filter-item"><button type="button" class="option">Дизайн</button></li>
-            <li class="filter-item"><button type="button" class="option">Маркетинг</button></li>
+          <ul class="list filter__list">
+            <li class="filter__list-item"><button type="button" class="filter__list-option">Все</button></li>
+            <li class="filter__list-item"><button type="button" class="filter__list-option">Веб-сайты</button></li>
+            <li class="filter__list-item"><button type="button" class="filter__list-option">Приложения</button></li>
+            <li class="filter__list-item"><button type="button" class="filter__list-option">Дизайн</button></li>
+            <li class="filter__list-item"><button type="button" class="filter__list-option">Маркетинг</button></li>
           </ul>
                    
           <!-- <div class="box">
