--- a/portfolio.html
+++ b/portfolio.html
@@ -67,96 +67,92 @@
             <li class="filter__list-item"><button type="button" class="filter__list-option">Маркетинг</button></li>
           </ul>
                    
-          <!-- <div class="box">
-                <div class="overlay"></div>
-                </div> -->
-
-      <!-- Portfolio Examples -->
-          <ul class="list examples-list">
-            <li class="item">
+          <!-- Portfolio Examples -->
+          <ul class="examples__list list">
+            <li class="examples__list-item">
                   <a href="" class="link">
-                    <div class="examples-overlay">
+                    <div class="examples__overlay">
                      <img src="./img/works/technokryak.jpg" alt="Веб-страница сайта" width="370" height="294" />
-                     <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                     <p class="examples__list-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                       платформу для цифрового
                       шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
                 <div class="examples-container">
-                  <h2 class="name">Технокряк</h2>
-                  <p class="text">Веб-сайт</p>
+                  <h2 class="examples__list-name">Технокряк</h2>
+                  <p class="examples__list-text">Веб-сайт</p>
                 </div>                
               </a>
             </li>
-            <li class="item">
+            <li class="examples__list-item">
               <a href="" class="link">
                 <img src="./img/works/basketballposter.jpg" alt="Постер баскетбольного матча" width="370" height="294" />
                 <div class="examples-container">
-                 <h2 class="name">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
-                  <p class="text">Дизайн</p>
+                 <h2 class="examples__list-name">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
+                  <p class="examples__list-text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="examples__list-item">
               <a href="" class="link">
                 <img src="./img/works/seafoodrestaurant.jpg" alt="Фото лого ресторана" width="370" height="294" />
                 <div class="examples-container">
-                 <h2 class="name">Ресторан <span lang="en">Seafood</span> </h2>
-                 <p class="text">Приложение</p>
+                 <h2 class="examples__list-name">Ресторан <span lang="en">Seafood</span> </h2>
+                 <p class="examples__list-text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="examples__list-item">
               <a href="" class="link">
                 <img src="./img/works/prime.jpg" alt="Наушники" width="370" height="294" />
                 <div class="examples-container">
-                  <h2 class="name">Проект <span lang="en">Prime</span> </h2>
-                  <p class="text">Маркетинг</p>
+                  <h2 class="examples__list-name">Проект <span lang="en">Prime</span> </h2>
+                  <p class="examples__list-text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="examples__list-item">
               <a href="" class="link">
                 <img src="./img/works/boxes.jpg" alt="Коробки" width="370" height="294" />
                 <div class="examples-container">
-                 <h2 class="name">Проект <span lang="en">Boxes</span> </h2>
-                 <p class="text">Приложение</p>
+                 <h2 class="examples__list-name">Проект <span lang="en">Boxes</span> </h2>
+                 <p class="examples__list-text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="examples__list-item">
               <a href="" class="link">
                 <img src="./img/works/inspiration.jpg" alt="Веб-страница сайта" width="370" height="294" />
                 <div class="examples-container">
-                 <h2 lang="en" class="name">Inspiration has no Borders</h2>
-                 <p class="text">Веб-сайт</p>
+                 <h2 lang="en" class="examples__list-name">Inspiration has no Borders</h2>
+                 <p class="examples__list-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="examples__list-item">
               <a href="" class="link">
                 <img src="./img/works/limitededition.jpg" alt="Страница журнала" width="370" height="294" />
                 <div class="examples-container">
-                 <h2 class="name">Издание <span lang="en">Limited Edition</span> </h2>
-                 <p class="text">Дизайн</p>
+                 <h2 class="examples__list-name">Издание <span lang="en">Limited Edition</span> </h2>
+                 <p class="examples__list-text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="examples__list-item">
               <a href="" class="link">
                 <img src="./img/works/lab.jpg" alt="Бирка с названием проекта" width="370" height="294" />
                 <div class="examples-container">
-                 <h2 class="name">Проект <span lang="en">LAB</span> </h2>
-                 <p class="text">Маркетинг</p>
+                 <h2 class="examples__list-name">Проект <span lang="en">LAB</span> </h2>
+                 <p class="examples__list-text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="examples__list-item">
               <a href="" class="link">
                 <img src="./img/works/growingbusiness.jpg" alt="Ноутбук с написанием названия приложения на мониторе" width="370"
                   height="294" />
                 <div class="examples-container">
-                 <h2 lang="en" class="name">Growing Business</h2>
-                 <p class="text">Приложение</p>
+                 <h2 lang="en" class="examples__list-name">Growing Business</h2>
+                 <p class="examples__list-text">Приложение</p>
                 </div>                                
               </a>
             </li>
