clients scss done

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <div class="footer__subscribe">
           <p class="footer__subscribe-title">Подпишитесь на рассылку</p>
           <form action="#" class="footer__subscribe-form">
-            <input type="email" name="subscribe-input" id="" class="footer__subscribe-input" placeholder="E-mail">
+            <input type="email" name="subscribe-input" id="subscribe-input" class="footer__subscribe-input" placeholder="E-mail">
             <button type="button" class="footer__subscribe-btn button">Подписаться
               <svg class="footer__subscribe-svg">
                 <use href="./img/icon-send.svg#icon-icon-send"></use>
@@ -420,7 +420,7 @@
         </button>
         <h2 class="modal__title">Оставьте свои данные, мы вам перезвоним</h2>
         
-        <form action="" class="modal-form">
+        <form action="#" class="modal-form">
 
           <div class="modal-form__field">
             <input type="text" name="user-name" id="user-name" class="modal-form__input">
