--- a/portfolio.html
+++ b/portfolio.html
@@ -208,7 +208,7 @@
         <div class="footer__subscribe">
           <p class="footer__subscribe-title">Подпишитесь на рассылку</p>
           <form action="#" class="footer__subscribe-form">
-            <input type="email" name="subscribe-input" id="" class="footer__subscribe-input" placeholder="E-mail">
+            <input type="email" name="subscribe-input" id="subscribe-input" class="footer__subscribe-input" placeholder="E-mail">
             <button type="button" class="footer__subscribe-btn button">Подписаться
               <svg class="footer__subscribe-svg">
                 <use href="./img/icon-send.svg#icon-icon-send"></use>
